--- a/Deployment/templates/index.html
+++ b/Deployment/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+   
    <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Model Deployment</title>
+      <script src="https://cdn.plot.ly/plotly-latest.min.js" ></script>
    </head>
    <body>
       <h1>Predict the value of your item</h1>
@@ -15,9 +17,9 @@
        
          <label for="cars">Choose Your City:</label>
          <select name="city" id="city">
-            <optgroup label="City">
+            <optgroup label="Aceh">
                <option value="KOTA MEULABOH">KOTA MEULABOH</option>
-               <option value="KOTA_BANDA_ACEH">KOTA BANDA ACEH</option>
+               <option value="KOTA BANDA ACEH">KOTA BANDA ACEH</option>
             </optgroup>
          </select><br><br>
 
@@ -32,12 +34,26 @@
          <input type="date" id="inflation_date_end" name="inflation_date_end"><br><br>
 
          <input type="submit">
-
          
+       
       </form>
+
+      <!-- <img src="/plot.png" alt="my plot"> -->
+         
 
    {% if my_marks %}
          {{my_marks}}      
    {% endif %}
+
+   <div class="container" id="chart1" style="margin:0 auto;align-items: center; justify-content: center; ">
+      <script type="text/javascript">
+      var graphs;
+      var graphs = {{ chart_for_html | safe }};
+      var graphs=JSON.parse(graphs);
+      // console.log()
+      var config ={displayModeBar: false,showTips: false,responsive:true};
+      Plotly.plot('chart1',graphs.data,graphs.layout,config);
+      </script>
+      </div>
    </body>
    </htm1>
