--- a/Deployment/templates/product.html
+++ b/Deployment/templates/product.html
@@ -12,8 +12,8 @@
       <h1>Predict the value of your item</h1>
     
       <form action="/" method="POST">
-         <label for="cars">Value:</label>
-         <input type="text" name="value" placeholder="Value"><br><br>
+         <label for="cars">Product:</label>
+         <input type="text" name="product" placeholder="Value"><br><br>
        
          <label for="cars">Choose Your City:</label>
          <select name="city" id="city">
@@ -23,13 +23,13 @@
             </optgroup>
          </select><br><br>
 
-         <label for="cars">Choose Your Sector:</label>
+         <!-- <label for="cars">Choose Your Sector:</label>
          <select name="sector_option" id="sector_option">
             <optgroup label="Swedish Cars">
                <option value="MAKANAN">MAKANAN</option>
                <option value="MINUMAN_TAK_BERALKOHOL">MINUMAN TAK BERALKOHOL</option>
             </optgroup>
-         </select><br><br>
+         </select><br><br> -->
          <label for="cars">End Date:</label>
          <input type="date" id="inflation_date_end" name="inflation_date_end"><br><br>
 
