--- a/Deployment/templates/index.html
+++ b/Deployment/templates/index.html
@@ -200,7 +200,7 @@
                         {% endif %}
 
                         <div class="row my-3 pd-md-5">
-                            <h5 class="text-center">Line chart</h5>
+                            <!-- <h5 class="text-center">Line chart</h5> -->
                             <div class="col-md-1"></div>
                             <div class="col-md-10">
                                 <div class="d-grid gap-1"id="chart1" >
