--- a/Deployment/templates/product.html
+++ b/Deployment/templates/product.html
@@ -186,7 +186,8 @@
                                 <div class="col-md-1"></div>
                                 <div class="col-md-10">
                                     <div class="d-grid gap-1">
-                                        <button type="submit" class="btn btn-succes btn-green">Check!</button>
+                                        <input type="submit" class="btn btn-succes btn-green">
+                                        <!-- <button type="submit" class="btn btn-succes btn-green">Check!</button> -->
                                     </div>
                                 </div>
                                 <div class="col-md-1"></div>
@@ -199,7 +200,7 @@
                         {% endif %}
 
                         <div class="row my-3 pd-md-5">
-                            <h5 class="text-center">Line chart</h5>
+                            <!-- <h5 class="text-center">Line chart</h5> -->
                             <div class="col-md-1"></div>
                             <div class="col-md-10">
                                 <div class="d-grid gap-1" id="chart1">
@@ -250,7 +251,7 @@
                                         Plotly.plot('chart3',graphs3.data,graphs.layout,config);
                                     </script>
                                 </div>
-                                <a href="product.html">Next</a>
+                                <a href="index.html">Next</a>
                             </div>
                         </div>
 
