--- a/Deployment/static/style.css
+++ b/Deployment/static/style.css
@@ -6,17 +6,18 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    /* height: 100vh; */
+    /* height: 170vh; */
 }
 
 .bg-img {
+    /* position: absolute; */
     background: url('./img-hero-min4.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
     /* width: 100%; */
-    height: 200vh;
+    height: 250vh;
     /* background-position-y: -100px; */
 }
 
