--- a/Deployment/templates/index.html
+++ b/Deployment/templates/index.html
@@ -43,7 +43,7 @@
                             <div class="row my-3">
                                 <div class="col-md-1"></div>
                                 <div class="col-4">
-                                    <label for="value" class="col-sm-6 col-form-label">Value</label>
+                                    <label for="value" class="col-sm-6 col-form-label">Value (in Rupiah)</label>
                                 </div>
 
                                 <div class="col-6">
