--- a/Deployment/static/style.css
+++ b/Deployment/static/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     /* height: 170vh; */
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
 
 .bg-img {
